--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,11 @@
       "src": "/(.*)",
       "dest": "src/server.js"
     }
+  ],
+  "crons": [
+    {
+      "path": "/p/general/exchange-rates/cron-job",
+      "schedule": "*/36 * * * *"
+    }
   ]
 }
